@@ -19,6 +19,7 @@ features:
 - can now output the solutions in the solution pool in the interactive shell
 - updated Mosek interface to compile with Mosek 7, too
 - reading erroneous CIP files can now output some indication of syntax errors
+- can now run splint on core files
 
 performance improvements:
 - improved SCIPlpiAdd{Cols,Rows}() in SoPlex LPi
